Updated Elections website, fixed alignment issues on samll and medium screens

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency_v1.css" rel="stylesheet">
+  <link href="css/agency_v2.css" rel="stylesheet">
 
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
@@ -34,7 +34,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg fixed-top shadow" id="mainNav">
+  <nav class="navbar navbar-expand-md fixed-top shadow" id="mainNav">
     <div class="container">
       <a href="#page-top"><img class="nav-logo img-fluid" src="img/logos/Sports_Club_Logo.png" alt="NUS Students Sports Club Logo"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -438,7 +438,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-4" align="left">
+        <div class="col-md-4 text-center text-md-left">
           <div>E: enquiry@nussportsclub.org</div>
           <div>A: 8 Sports Drive 1 S(117564)</div>
         </div>
