Fixed Minor English and Alignment Issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency_v4.css" rel="stylesheet">
+  <link href="css/agency_v5.css" rel="stylesheet">
 
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
@@ -47,13 +47,13 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#timeline">Timeline</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#Cells">Cells</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#timeline">Timeline</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -68,12 +68,11 @@
     <div class="container">
       <div class="intro-text">
         <div class="semi-transparent-background animated flipInX delay-2s">
-          <div class="intro-heading text-uppercase">Its <u>your</u> time to change the world!</div>
+          <div class="intro-heading text-uppercase">It's <u>your</u> time to change the world!</div>
         </div>
         <div class="semi-transparent-background animated flipInX delay-3s">
-          <div class="intro-lead-in text-uppercase">Nominations are now open for the 40th Sports Club Management Committee!</div>
+          <div class="intro-lead-in text-uppercase">Nominations open on 10 August!</div>
         </div>
-        <!-- <a id="find-out-more" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger animated pulse" style="margin-top:30px;visibility:hidden;" href="#timeline">Tell Me More</a> -->
       </div>
     </div>
   </header>
@@ -83,150 +82,46 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">More about us</h2>
-          <h3 class="section-subheading text-muted">"Leadership is not about a title or a designation. It's about impact, influence and inspiration. Impact involves getting results, influence is about spreading the passion you have for your work, and you have to inspire team-mates and customers." ~ Robin S. Sharma</h3>
+          <h2 class="section-heading text-uppercase" style="margin-bottom:20px;">Hello!</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-md-12 text-left">
+            <p class="text-justify">The elections for the 40th Management Committee of NUS Students’ Sports Club have commenced!</p>
+            <p class="text-justify">NUS Students’ Sports Club (NUSSSC) is the largest non-faculty constituent club in NUS. As one of the most active and wide-reaching student-run organisations on campus, we are dedicated to be the leading platform to promote community bonding through recreational sports.</p>
+            <p class="text-justify">To achieve this, we are a family of 18 Member Clubs (categorised into Martial Arts, Water, Land & Indoor sports) and 6 Sports Club Projects (NUS Biathlon, SunNUS, NUS Sports Camp, MADNUS, RunNUS and Inter-Faculty Games), providing the NUS population with an array of sporting activities and multiple channels to enrich their university experience.</p>
+            <p class="text-justify">The Management Committee oversees the operations of all Member Clubs and Sports Club Projects by providing administrative, financial and logistical support. As the bridge between Sports Club and the general NUS population, Office of Student Affairs (OSA) and external organisations, we are also able to strategically brand these entities and assist in maximising the impact of each of their events and operations.</p>
+        </div>
+      </div>
+      <div class="col-lg-12 text-center">
+        <h3 class="section-subheading text-muted" style="margin-bottom:20px;">"Leadership is not about a title or a designation. It's about impact, influence and inspiration. Impact involves getting results, influence is about spreading the passion you have for your work, and you have to inspire team-mates and customers." ~ Robin S. Sharma</h3>
+      </div>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10 text-center">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" alt="Synergy Video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FNUSSportsClub%2Fvideos%2F2128916320691425%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_pXxmsIkRF0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
+        <div class="col-md-1"></div>
       </div>
     </div>
   </section>
 
-  <!-- Timeline -->
-  <section class="page-section" id="timeline">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Election Timeline</h2>
-          <h3 class="section-subheading text-muted" style="margin-bottom:10px;">"By failing to prepare, you are preparing to fail" ~ Benjamin Franklin</h3>
-          <a href="doc/Sports_Club_Management_Committee.pdf">
-            <h6 style="margin-bottom:50px;">Read the <u>Election Regulations</u> before proceeding</h6>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="timeline">
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/Timeline/form.png" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h5>5 to 21 August</h5>
-                  <h4 class="subheading">Nominations</h4>
-                </div>
-                <div class="timeline-body">
-                  <a href="https://orgsync.com/140428/forms/368500/" target="_blank">
-                    <p class="text-muted">Fill in <u>this</u> form!</p>
-                  </a>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/Timeline/interview.png" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h5>21 to 27 August</h5>
-                  <h4 class="subheading">Interviews</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Talk to us and find out more about each role in the MC!</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/Timeline/campaign.png" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h5>22 to 27 August</h5>
-                  <h4 class="subheading">Campaigning</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Let everyone know that you are running!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/Timeline/vote.png" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h5>28 to 30 August</h5>
-                  <h4 class="subheading">External Elections</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Ask your friends to vote!</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/Timeline/results.png" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h5>1 September</h5>
-                  <h4 class="subheading">External Elections Results</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Find out if you are elected!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/Timeline/internal.png" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h5>7 September</h5>
-                  <h4 class="subheading">Internal Elections</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Go the extra mile & step up as an EXCO member!</p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 text-center">
-          <h5>20 September</h5>
-          <h4>Annual General Meeting</h4>
-          <p class="text-muted">Welcome to the 40th!</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Portfolio Grid -->
+  <!-- Projects -->
   <section class="bg-light page-section" id="Cells">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Cells</h2>
+          <h2 class="section-heading text-uppercase">The Management Committee</h2>
           <h3 class="section-subheading text-muted">"If you want to change the world, find someone to help you paddle." ~ William H. McRaven</h3>
         </div>
       </div>
-
-
       <div class="card-deck justify-content-center">
         <div id="presidentialCell" class="card border-right-0">
           <img src="img/Cells/Presidential.jpg" class="card-img-top" alt="Presidential Cell">
           <div class="card-body">
-            <h5 class="card-title">Presidential</h5>
+            <h5 class="card-title">Presidential Cell</h5>
             <p class="card-text">We oversee all the operations within Sports Club and act as the interface between Sports Club and the school. We also help to make strategic decisions, and influence school policies towards recreational sports in general.</p>
           </div>
         </div>
@@ -235,43 +130,43 @@
         <div id="financeCell" class="card">
           <img src="img/Cells/Finance.jpg" class="card-img-top" alt="Finance Cell">
           <div class="card-body">
-            <h5 class="card-title">Finance</h5>
+            <h5 class="card-title">Finance Cell</h5>
             <p class="card-text">We oversee all finances under Sports Club and ensure that all financial procedures are carried out correctly.</p>
           </div>
         </div>
         <div class="card">
           <img src="img/Cells/Secretariat.jpg" class="card-img-top" alt="Secretariat Cell">
           <div class="card-body">
-            <h5 class="card-title">Secretariat</h5>
+            <h5 class="card-title">Secretariat Cell</h5>
             <p class="card-text">We help to settle necessary administrative, logistics and facilitate matters. We act as the interface with the sports office for the various sporting events and projects.</p>
           </div>
         </div>
         <div class="card">
           <img src="img/Cells/Marketing.jpg" class="card-img-top" alt="Marketing Cell">
           <div class="card-body">
-            <h5 class="card-title">Marketing</h5>
+            <h5 class="card-title">Marketing Cell</h5>
             <p class="card-text">We help to secure strategic supports and privilege partners for Sports Club. We also manage the disbursement of marketing products.</p>
           </div>
         </div>
         <div class="card">
           <img src="img/Cells/Publicity.jpg" class="card-img-top" alt="Publicity Cell">
           <div class="card-body">
-            <h5 class="card-title">Publicity</h5>
+            <h5 class="card-title">Publicity Cell</h5>
             <p class="card-text">We strategically brand Sports Club and its umbrella through the various outreach platforms available.</p>
           </div>
         </div>
         <div class="card">
           <img src="img/Cells/Welfare.jpg" class="card-img-top" alt="Welfare Cell">
           <div class="card-body">
-            <h5 class="card-title">Welfare</h5>
-            <p class="card-text">We organize various initiatives to enhance the well-being as well as appreciate the members' for their commitments and hard work.</p>
+            <h5 class="card-title">Welfare Cell</h5>
+            <p class="card-text">We organize various initiatives to enhance the well-being as well as appreciate the members for their commitments and hard work.</p>
           </div>
         </div>
         <div class="card">
           <img src="img/Cells/Projects.jpg" class="card-img-top" alt="Projects Cell">
           <div class="card-body">
-            <h5 class="card-title">Projects</h5>
-            <p class="card-text">We work together to strategically brand and organize the 6 Sports Club projects, ensuring its quality and excellence.</p>
+            <h5 class="card-title">Projects Cell</h5>
+            <p class="card-text">We work together to strategically brand and organize the 6 Sports Club Projects, ensuring its quality and excellence.</p>
           </div>
         </div>
       </div>
@@ -433,6 +328,121 @@
               </li>
             </ul>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Timeline -->
+  <section class="page-section" id="timeline">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Elections Timeline</h2>
+          <h3 class="section-subheading text-muted" style="margin-bottom:10px;">"By failing to prepare, you are preparing to fail" ~ Benjamin Franklin</h3>
+          <a href="doc/Sports_Club_Management_Committee.pdf">
+            <h6>Read the <u>Election Regulations</u> before proceeding</h6>
+          </a>
+          <a id="nominate" class="btn btn-primary button-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;" href="https://orgsync.com/140428/forms/368500/">Nominate yourself now</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/Timeline/form.png" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h5>10 to 21 August</h5>
+                  <h4 class="subheading">Nominations</h4>
+                </div>
+                <div class="timeline-body">
+                  <a href="https://orgsync.com/140428/forms/368500/" target="_blank">
+                    <p class="text-muted">Fill in <u>this</u> form!</p>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/Timeline/interview.png" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h5>21 to 27 August</h5>
+                  <h4 class="subheading">Interviews</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Talk to us and find out more about each role in the MC!</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/Timeline/campaign.png" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h5>22 to 27 August</h5>
+                  <h4 class="subheading">Campaigning</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Let everyone know that you are running for 40th!</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/Timeline/vote.png" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h5>28 to 30 August</h5>
+                  <h4 class="subheading">External Elections</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Ask your friends to vote!</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/Timeline/results.png" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h5>1 September</h5>
+                  <h4 class="subheading">External Elections Results</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Find out if you are elected!</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/Timeline/internal.png" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h5>7 September</h5>
+                  <h4 class="subheading">Internal Elections</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Go the extra mile & step up as an EXCO member!</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <h5>20 September</h5>
+          <h4>Annual General Meeting</h4>
+          <p class="text-muted">Time for Sports Club's Ruby Jubilee</p>
         </div>
       </div>
     </div>
