--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency_v5.css" rel="stylesheet">
+  <link href="css/agency_v6.css" rel="stylesheet">
 
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
   <!-- AddEvent script -->
   <script type="text/javascript" src="https://addevent.com/libs/atc/1.6.1/atc.min.js" async defer></script>
+
+  <!-- Jconfirm -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
 
 </head>
 
@@ -58,6 +61,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item" style="margin:auto;">
+            <a class="js-scroll-trigger btn btn-primary" href="#nominateScrollHere">Nominate</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -71,7 +77,7 @@
           <div class="intro-heading text-uppercase">It's <u>your</u> time to change the world!</div>
         </div>
         <div class="semi-transparent-background animated flipInX delay-3s">
-          <div class="intro-lead-in text-uppercase">Nominations open on 10 August!</div>
+          <div class="intro-lead-in text-uppercase">Nominations are opened!</div>
         </div>
       </div>
     </div>
@@ -92,9 +98,6 @@
             <p class="text-justify">To achieve this, we are a family of 18 Member Clubs (categorised into Martial Arts, Water, Land & Indoor sports) and 6 Sports Club Projects (NUS Biathlon, SunNUS, NUS Sports Camp, MADNUS, RunNUS and Inter-Faculty Games), providing the NUS population with an array of sporting activities and multiple channels to enrich their university experience.</p>
             <p class="text-justify">The Management Committee oversees the operations of all Member Clubs and Sports Club Projects by providing administrative, financial and logistical support. As the bridge between Sports Club and the general NUS population, Office of Student Affairs (OSA) and external organisations, we are also able to strategically brand these entities and assist in maximising the impact of each of their events and operations.</p>
         </div>
-      </div>
-      <div class="col-lg-12 text-center">
-        <h3 class="section-subheading text-muted" style="margin-bottom:20px;">"Leadership is not about a title or a designation. It's about impact, influence and inspiration. Impact involves getting results, influence is about spreading the passion you have for your work, and you have to inspire team-mates and customers." ~ Robin S. Sharma</h3>
       </div>
       <div class="row">
         <div class="col-md-1"></div>
@@ -167,6 +170,15 @@
           <div class="card-body">
             <h5 class="card-title">Projects Cell</h5>
             <p class="card-text">We work together to strategically brand and organize the 6 Sports Club Projects, ensuring its quality and excellence.</p>
+          </div>
+        </div>
+      </div>
+      <div class="card-deck justify-content-center">
+        <div id="nussuExcoRep" class="card border-right-0">
+          <img src="img/Cells/NUSSU_Exco_Rep.png" class="card-img-top" alt="NUSSU Exco Rep">
+          <div class="card-body">
+            <h5 class="card-title">NUSSU Exco Rep</h5>
+            <p class="card-text">We facilitate coordination and cooperation efforts between NUSSU Exco and Sports club and we represent the interest of the sporting community when engaging with the NUS administration.</p>
           </div>
         </div>
       </div>
@@ -341,9 +353,8 @@
           <h2 class="section-heading text-uppercase">Elections Timeline</h2>
           <h3 class="section-subheading text-muted" style="margin-bottom:10px;">"By failing to prepare, you are preparing to fail" ~ Benjamin Franklin</h3>
           <a href="doc/Sports_Club_Management_Committee.pdf">
-            <h6>Read the <u>Election Regulations</u> before proceeding</h6>
+            <h6 style="margin-bottom:30px;">Read the <u>Election Regulations</u> before proceeding</h6>
           </a>
-          <a id="nominate" class="btn btn-primary button-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;" href="https://orgsync.com/140428/forms/368500/">Nominate yourself now</a>
         </div>
       </div>
       <div class="row">
@@ -438,13 +449,28 @@
           </ul>
         </div>
       </div>
-      <div class="row">
+      <div id="nominateScrollHere" class="row">
         <div class="col-12 text-center">
           <h5>20 September</h5>
           <h4>Annual General Meeting</h4>
-          <p class="text-muted">Time for Sports Club's Ruby Jubilee</p>
+          <p class="text-muted">Time for Sports Club's Ruby Jubilee!</p>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2 col-md-1 col-sm-0"></div>
+      <div class="col-lg-8 col-md-10 col-sm-12 text-center">
+        <h3 class="section-subheading text-muted" style="margin-bottom:20px;">"Leadership is not about a title or a designation. It's about impact, influence and inspiration. Impact involves getting results, influence is about spreading the passion you have for your work, and you have to inspire team-mates and customers." ~ Robin S. Sharma</h3>
+      </div>
+      <div class="col-lg-2 col-md-1 col-sm-0"></div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2 col-md-1 col-sm-0"></div>
+      <div class="col-lg-8 col-md-10 col-sm-12 text-center">
+        <button id="nominate" class="btn btn-primary button-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;">Nominate yourself now</button>
+        <!-- <a id="nominate" class="btn btn-primary button-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;" href="https://orgsync.com/140428/forms/368500/">Nominate yourself now</a> -->
+      </div>
+      <div class="col-lg-2 col-md-1 col-sm-0"></div>
     </div>
   </section>
 
@@ -454,7 +480,14 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted" style="color:white !important;">“It is not the answer that enlightens, but the question.” ~ Eugene Ionesco</h3>
+          <h3 class="section-subheading text-muted" style="color:white !important;margin-bottom:20px;">“It is not the answer that enlightens, but the question.” ~ Eugene Ionesco</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h6 style="color:white !important;" >NUSSSC Election Committee</h6>
+          <div style="color:white !important;" >Returning Officer: Yong Cheng Low</div>
+          <div style="color:white !important;margin-bottom:30px;" >Election Officers: Marcia Lee, Adeline Tan</div>
         </div>
       </div>
       <div class="row">
@@ -520,7 +553,7 @@
           </ul>
         </div>
         <div class="col-md-4 text-center text-md-left">
-          <div>E: enquiry@nussportsclub.org</div>
+          <div>E: elections@nussportsclub.org</div>
           <div>A: 8 Sports Drive 1 S(117564)</div>
         </div>
       </div>
@@ -538,8 +571,11 @@
   <script src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
 
+  <!-- Jquery Confirm -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+
   <!-- Custom scripts for this template -->
-  <script src="js/agency.js"></script>
+  <script src="js/agency_v1.js"></script>
 
 </body>
 
