--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item" style="margin:auto;">
-            <a class="js-scroll-trigger btn btn-primary" href="#nominateScrollHere">Nominate</a>
+            <a id="vote" class="js-scroll-trigger btn btn-primary" href="#">Vote</a>
           </li>
         </ul>
       </div>
@@ -77,7 +77,8 @@
           <div class="intro-heading text-uppercase">It's <u>your</u> time to change the world!</div>
         </div>
         <div class="semi-transparent-background animated flipInX delay-3s">
-          <div class="intro-lead-in text-uppercase">Nominations are opened!</div>
+          <div class="intro-lead-in text-uppercase">External Elections are Opened!</div>
+          <button id="nominate" class="btn btn-primary btn-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;">Vote NOW!</button>
         </div>
       </div>
     </div>
@@ -467,7 +468,7 @@
     <div class="row">
       <div class="col-lg-2 col-md-1 col-sm-0"></div>
       <div class="col-lg-8 col-md-10 col-sm-12 text-center">
-        <button id="nominate" class="btn btn-primary button-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;">Nominate yourself now</button>
+
         <!-- <a id="nominate" class="btn btn-primary button-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;" href="https://orgsync.com/140428/forms/368500/">Nominate yourself now</a> -->
       </div>
       <div class="col-lg-2 col-md-1 col-sm-0"></div>
@@ -575,7 +576,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/agency_v1.js"></script>
+  <script src="js/agency_v3.js"></script>
 
 </body>
 
