--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item" style="margin:auto;">
-            <a id="vote" class="js-scroll-trigger btn btn-primary" href="#">Vote</a>
+            <a id="vote" class="js-scroll-trigger btn btn-primary" href="#results">Results</a>
           </li>
         </ul>
       </div>
@@ -77,8 +77,8 @@
           <div class="intro-heading text-uppercase">It's <u>your</u> time to change the world!</div>
         </div>
         <div class="semi-transparent-background animated flipInX delay-3s">
-          <div class="intro-lead-in text-uppercase">External Elections are Opened!</div>
-          <button id="nominate" class="btn btn-primary btn-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;">Vote NOW!</button>
+          <div class="intro-lead-in text-uppercase">Elections have Ended!</div>
+          <a class="js-scroll-trigger btn btn-primary btn-xl text-uppercase" href="#results" style="margin-bottom:25px;margin-top:10px;">See the results</a>
         </div>
       </div>
     </div>
@@ -465,14 +465,6 @@
       </div>
       <div class="col-lg-2 col-md-1 col-sm-0"></div>
     </div>
-    <div class="row">
-      <div class="col-lg-2 col-md-1 col-sm-0"></div>
-      <div class="col-lg-8 col-md-10 col-sm-12 text-center">
-
-        <!-- <a id="nominate" class="btn btn-primary button-xl text-uppercase" style="margin-bottom:25px;margin-top:10px;" href="https://orgsync.com/140428/forms/368500/">Nominate yourself now</a> -->
-      </div>
-      <div class="col-lg-2 col-md-1 col-sm-0"></div>
-    </div>
   </section>
 
   <!-- Contact -->
@@ -527,6 +519,29 @@
     </div>
   </section>
 
+  <!-- Results -->
+  <section class="page-section" id="results">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase" style="margin-bottom:20px;">Results</h2>
+          <h3 class="section-subheading text-muted">"There are no secrets to success. It is the result of preparation, hard work, and learning from failure." ~ Colin Powell</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h5>President: Lim Jun Wen Ivan</h5>
+          <h5>Vice-President (Internal): Eng Woon Lin</h5>
+          <h5>Vice-President (External): Sarah Veronica Ang</h5>
+          <h5>General Secretary: Teflyn Phua Siew Leng</h5>
+          <h5>Finance Secretary: Chng Shun Quan</h5>
+          <h5>Welfare Secretary: Chiang Wei Keat</h5>
+          <h5>Projects Secretary: Kok Ze Xuan</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
@@ -576,7 +591,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/agency_v3.js"></script>
+  <script src="js/agency_v4.js"></script>
 
 </body>
 
